@@ -17,6 +17,7 @@ $Id$
 
 from zLOG import LOG, INFO
 
+import PatchCMFCoreCMFCatalogAware
 import PatchZODBTransaction
 
 # DCWorkflowGraph is not always present
